--- a/DesktopApp/Styles/SettingsStyles.xaml
+++ b/DesktopApp/Styles/SettingsStyles.xaml
@@ -50,7 +50,7 @@
         <Setter Property="Margin"
                 Value="10" />
         <Setter Property="Width"
-                Value="100" />
+                Value="auto" />
         <Setter Property="Height"
                 Value="40" />
         <Setter Property="CornerRadius"
